[ios] Make close button tap target larger on tab grid

Since the close button and cell header is smaller than the recommended
tap target, use an overlaid tap target to receive taps for the close
button.

Bug: 842647
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ibc728aeba89cc9183a5de7d7fe1e8795dc3da99c
Reviewed-on: https://chromium-review.googlesource.com/1118756
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571521}
Former-commit-id: 60d379e2c7630d1a346b22b10d90ac2cef956690